--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,10 @@ yarn-error.log*
 
 # Optional eslint cache
 .eslintcache
+
+# environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
